--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,19 +48,42 @@
 
         </RadioGroup>
 
+
+        <RadioGroup
+            android:id="@+id/agruparES"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="100dp">
+
+            <RadioButton
+                android:id="@+id/rbtnHola"
+                android:text="Hola"
+                android:layout_width="100dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="80dp"/>
+
+            <RadioButton
+                android:id="@+id/rbtnAdios"
+                android:text="Adios"
+                android:layout_width="100dp"
+                android:layout_height="40dp"/>
+
+        </RadioGroup>
+
+
         <Button
-            android:id="@+id/btnHola"
-            android:text="Hola"
-            android:layout_width="200dp"
+            android:id="@+id/btnSaludar"
+            android:layout_width="100dp"
             android:layout_height="40dp"
-            android:layout_marginTop="200dp"
+            android:text="Saludar"
+            android:layout_marginTop="300dp"
             android:layout_centerHorizontal="true"/>
 
         <TextView
             android:id="@+id/salida"
             android:layout_width="300dp"
             android:layout_height="60dp"
-            android:layout_marginTop="300dp"
+            android:layout_marginTop="350dp"
             android:layout_centerHorizontal="true"/>
 
 
